http-route/frontend-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-httproute
  namespace: default
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: nginx-gateway
    namespace: ingress-nginx
    sectionName: http
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: frontend-svc
      namespace: app
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /frontend
